--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@
   <section>
     <h2>Contact Me</h2>
     <div class="contact">
-      <p>Have a question or want to schedule a service? Fill out the form below or text me directly at (XXX) XXX-XXXX.</p>
-      <form action="mailto:your@email.com" method="post" enctype="text/plain">
+      <p>Have a question or want to schedule a service? Fill out the form below or text me directly at (970) 518-1393.</p>
+      <form action="mailto:cg6510841@gmail.com" method="post" enctype="text/plain">
         <label for="name">Name</label>
         <input type="text" id="name" name="name" required>
 
