--- a/index.html
+++ b/index.html
@@ -162,6 +162,7 @@
     <!-- Blog -->
     <section id="blog" aria-labelledby="blog-title">
       <h2 id="blog-title">Blog</h2>
+      <iframe src="https://tgfl.librarika.com/widgets/search/horizontal" width="468" height="150" marginwidth="0" marginheight="0" align="top" scrolling="No" frameborder="0" hspace="0" vspace="0"></iframe>
       <div class="controls">
         <input id="search" class="search" type="search" placeholder="Search posts… (title, tags, summary)" aria-label="Search posts" />
         <select id="tagFilter" class="filter" aria-label="Filter by tag">
