--- a/index.html
+++ b/index.html
@@ -354,15 +354,9 @@
 
     function samplePostBody(p) {
       return `
-        <p>This is a placeholder body for <em>${p.title}</em>. Replace it with your own writing or load Markdown (see note below). Here’s some sample formatting:</p>
         <h2>Subheading</h2>
-        <p>Body text with <strong>bold</strong>, <em>italic</em>, and <code>inline code</code>.</p>
-        <pre><code>// code block example
-function hello() { console.log('Hello!'); }
-hello();
-</code></pre>
-        <blockquote>Clean, readable typography matters. Keep paragraphs short and use headings to guide the eye.</blockquote>
-        <p>That’s it! Ship fast, iterate often.</p>
+        <p>Hello everyone, my name is Colby Gordon. I am formost a Catholic discerning his vocation while on this beautiful pilgrimage to the heavenly realm. 
+        But I spend a lot of my time as a Stihl Tech at ACE Hardware in Eaton, reading great books (reading list to come soon), wrenching on my 1990 Lincoln TownCar and 1977 Ford F-150, and a myriad of eclectic pursuits.</p>
       `;
     }
 
