--- a/index.html
+++ b/index.html
@@ -42,7 +42,8 @@
 
     <div id="content">
       <a id="home"></a>
-      <p class="intro">Welcome! This is a no-frills, old-school personal site. New posts appear below. To add an article, copy an <code>&lt;article&gt;</code> block and edit the title/date/text. The Archive list updates automatically.</p>
+      <p class="intro">Welcome, my name is Colby Gordon. I am formost a Catholic discerning his vocation while on this beautiful pilgrimage to the heavenly realm. 
+        But I spend a lot of my time as a Stihl Tech at ACE Hardware in Eaton, reading great books (reading list to come soon), wrenching on my 1990 Lincoln TownCar and 1977 Ford F-150, and a myriad of eclectic pursuits.</p>
 
       <!-- ========== ARTICLES (copy/paste this whole <article> block for new posts) ========== -->
       <article class="article" data-title="Hello, World" data-date="2025-08-20">
