--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My Simple 2000s-Style Blog</title>
+  <title>Colby's Corner</title>
   <meta name="description" content="A very simple personal site and blog, old-school style.">
   <!-- Kept intentionally simple for easy GitHub Pages hosting -->
   <style>
@@ -30,8 +30,8 @@
 <body>
   <div id="page">
     <div id="header">
-      <h1>My Simple Blog</h1>
-      <p id="tagline">thoughts, notes, and links</p>
+      <h1>Colby's Cornerg</h1>
+      <p id="tagline">updates, notes, and ruminations</p>
     </div>
 
     <div id="nav">
@@ -42,7 +42,7 @@
 
     <div id="content">
       <a id="home"></a>
-      <p class="intro">Welcome, my name is Colby Gordon. I am formost a Catholic discerning his vocation while on this beautiful pilgrimage to the heavenly realm. 
+      <p class="intro">Welcome, my name is Colby G. I am formost a Catholic discerning his vocation while on this beautiful pilgrimage to the heavenly realm. 
         But I spend a lot of my time as a Stihl Tech at ACE Hardware in Eaton, reading great books (reading list to come soon), wrenching on my 1990 Lincoln TownCar and 1977 Ford F-150, and a myriad of eclectic pursuits.</p>
 
       <!-- ========== ARTICLES (copy/paste this whole <article> block for new posts) ========== -->
@@ -50,12 +50,9 @@
         <a id="post-hello-world"></a>
         <h3>Hello, World</h3>
         <div class="meta">Posted on <span class="date">August 20, 2025</span></div>
-        <p>This is a sample post. Keep things simple: paragraphs, <a href="#">links</a>, and the occasional list.</p>
-        <ul>
-          <li>Write in plain HTML.</li>
-          <li>No build steps or frameworks.</li>
-          <li>Commit to GitHub Pages and you're live.</li>
-        </ul>
+        <p>My name is Colby G. I am formost a Catholic discerning his vocation while on this beautiful pilgrimage to the heavenly realm. 
+        But I spend a lot of my time as a Stihl Tech at ACE Hardware in Eaton, reading great books (reading list to come soon), 
+        wrenching on my 1990 Lincoln TownCar and 1977 Ford F-150, and a myriad of eclectic pursuits. <a href="https://www.youtube.com/@Colby.G.03">YouTube Channel</a>.
       </article>
 
       <article class="article" data-title="Second Post" data-date="2025-08-19">
