--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 <body>
   <div id="page">
     <div id="header">
-      <h1>Colby's Cornerg</h1>
+      <h1>Colby's Corner</h1>
       <p id="tagline">updates, notes, and ruminations</p>
     </div>
 
