--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="shortcut icon" type="image/x-icon" href="favicon.ico.png">
   <meta charset="utf-8">
   <title>Colby's Corner</title>
   <meta name="description" content="A very simple personal site and blog, old-school style.">
