--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <a id="post-second"></a>
         <h3>Second Post</h3>
         <div class="meta">Posted on <span class="date">August 19, 2025</span></div>
-        <p>Here's another example. To add images, put them in the same folder and reference them: <code>&lt;img src="photo.jpg" alt="Description"&gt;</code>.</p>
+        <p>Here's another example. To add images, put them in the same folder and reference them: <code>&lt;img src="MICHAEL.jpg" alt="Description"&gt;</code>.</p>
       </article>
       <!-- ========== END ARTICLES ========== -->
 
@@ -70,7 +70,7 @@
       </div>
 
       <h2 id="about">About</h2>
-      <p>I'm a human on the internet. I like building simple things that last.</p>
+      <p>I'm a Catholic on the internet. I like building simple things that last.</p>
 
     </div>
 
