--- a/index.html
+++ b/index.html
@@ -60,7 +60,13 @@
         <a id="post-second"></a>
         <h3>Second Post</h3>
         <div class="meta">Posted on <span class="date">August 19, 2025</span></div>
-        <p>Here's another example. To add images, put them in the same folder and reference them: <code>&lt;img src="MICHAEL.jpg" alt="Description"&gt;</code>.</p>
+        <p>On the Benefits of Silence: 
+        Today's society is by far the most advanced this world has ever seen. 
+        In the early 20th century, the average person's transportation was 
+        on foot or by horse, their food was prepared at home, entertainment 
+        was through books games and conversations, and perhaps most 
+        shockingly; communication across vast distances was slow if successful 
+        at all.  <code>&lt;img src="MICHAEL.jpg" alt="Description"&gt;</code>.</p>
       </article>
       <!-- ========== END ARTICLES ========== -->
 
