--- a/index.html
+++ b/index.html
@@ -43,8 +43,7 @@
 
     <div id="content">
       <a id="home"></a>
-      <p class="intro">Welcome, my name is Colby G. I am formost a Catholic discerning his vocation while on this beautiful pilgrimage to the heavenly realm. 
-        But I spend a lot of my time as a Stihl Tech at ACE Hardware in Eaton, reading great books (reading list to come soon), wrenching on my 1990 Lincoln TownCar and 1977 Ford F-150, and a myriad of eclectic pursuits.</p>
+      <p class="intro">Welcome, my name is Colby. Feel free to linger awhile in this enclave of sanity.</p>
 
       <!-- ========== ARTICLES (copy/paste this whole <article> block for new posts) ========== -->
       <article class="article" data-title="Hello, World" data-date="2025-08-20">
@@ -66,7 +65,7 @@
         on foot or by horse, their food was prepared at home, entertainment 
         was through books games and conversations, and perhaps most 
         shockingly; communication across vast distances was slow if successful 
-        at all.  <code>&lt;img src="MICHAEL.jpg" alt="Description"&gt;</code>.</p>
+        at all.  <img src="MICHAEL.jpg" alt="Saint Michael the Archangel" width="500" height="600">.</p>
       </article>
       <!-- ========== END ARTICLES ========== -->
 
@@ -76,7 +75,9 @@
       </div>
 
       <h2 id="about">About</h2>
-      <p>I'm a Catholic on the internet. I like building simple things that last.</p>
+      <p>My name is Colby G. I am formost a Catholic discerning his vocation while on this beautiful pilgrimage to the heavenly realm. 
+        But I spend a lot of my time as a Stihl Tech at ACE Hardware in Eaton, reading great books (reading list to come soon), 
+        wrenching on my 1990 Lincoln TownCar and 1977 Ford F-150, and a myriad of other eclectic pursuits.</p>
 
     </div>
 
