--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         on foot or by horse, their food was prepared at home, entertainment 
         was through books games and conversations, and perhaps most 
         shockingly; communication across vast distances was slow if successful 
-        at all.  <img src="MICHAEL.jpg" alt="Saint Michael the Archangel" width="500" height="600">.</p>
+        at all.  <img src="MICHAEL.jpg" alt="Saint Michael" class="center">
+.</p>
       </article>
       <!-- ========== END ARTICLES ========== -->
 
