--- a/index.html
+++ b/index.html
@@ -58,16 +58,28 @@
       <article class="article" data-title="Second Post" data-date="2025-08-19">
         <a id="post-second"></a>
         <h3>Second Post</h3>
-        <div class="meta">Posted on <span class="date">August 19, 2025</span></div>
+        <div class="meta">Posted on <span class="date">August 20, 2025</span></div>
         <p>On the Benefits of Silence: 
         Today's society is by far the most advanced this world has ever seen. 
         In the early 20th century, the average person's transportation was 
         on foot or by horse, their food was prepared at home, entertainment 
         was through books games and conversations, and perhaps most 
         shockingly; communication across vast distances was slow if successful 
-        at all.  <img src="MICHAEL.jpg" alt="Saint Michael" class="center">
-.</p>
+        at all.  <img src="MICHAEL.jpg" alt="Saint Michael" class="center">.</p>
       </article>
+      
+       <article class="article" data-title="Reading List" data-date="2025-08-21">
+        <a id="post-reading-list"></a>
+        <h3>Reading List</h3>
+        <div class="meta">Posted on <span class="date">August 21, 2025</span></div>
+        <p>Father Elijah
+          Sherlock Holmes
+          Quo Vadis
+          The Mad Scientist Club
+          The Last of the Breed
+          Introduction to the Devout Life
+          <a href="https://www.youtube.com/@Colby.G.03">YouTube Channel</a>.
+        </article>
       <!-- ========== END ARTICLES ========== -->
 
       <h2 id="archive">Archive</h2>
