--- a/index.html
+++ b/index.html
@@ -55,17 +55,17 @@
         wrenching on my 1990 Lincoln TownCar and 1977 Ford F-150, and a myriad of eclectic pursuits. <a href="https://www.youtube.com/@Colby.G.03">YouTube Channel</a>.
       </article>
 
-      <article class="article" data-title="Second Post" data-date="2025-08-19">
-        <a id="post-second"></a>
-        <h3>Second Post</h3>
+      <article class="article" data-title="On the Benefits of Silence" data-date="2025-08-20">
+        <a id="benefits-silence"></a>
+        <h3>On the Benefits of Silence</h3>
         <div class="meta">Posted on <span class="date">August 20, 2025</span></div>
-        <p>On the Benefits of Silence: 
-        Today's society is by far the most advanced this world has ever seen. 
+        <p>Today's society is by far the most advanced this world has ever seen. 
         In the early 20th century, the average person's transportation was 
         on foot or by horse, their food was prepared at home, entertainment 
         was through books games and conversations, and perhaps most 
         shockingly; communication across vast distances was slow if successful 
-        at all.  <img src="MICHAEL.jpg" alt="Saint Michael" class="center">.</p>
+        at all. To be contiued.....  
+        <img src="MICHAEL.jpg" alt="Saint Michael" class="center">.</p>
       </article>
       
        <article class="article" data-title="Reading List" data-date="2025-08-21">
