--- a/index.html
+++ b/index.html
@@ -72,12 +72,12 @@
         <a id="post-reading-list"></a>
         <h3>Reading List</h3>
         <div class="meta">Posted on <span class="date">August 21, 2025</span></div>
-        <p>Father Elijah
-          Sherlock Holmes
-          Quo Vadis
-          The Mad Scientist Club
-          The Last of the Breed
-          Introduction to the Devout Life
+        <p>Father Elijah<br>
+          Sherlock Holmes<br>
+          Quo Vadis<br>
+          The Mad Scientist Club<br>
+          The Last of the Breed<br>
+          Introduction to the Devout Life<br>
           <a href="https://www.youtube.com/@Colby.G.03">YouTube Channel</a>.
         </article>
       <!-- ========== END ARTICLES ========== -->
