--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>My Simple Blog</title>
+  <title>Colby's Corner</title>
   <style>
     body { font-family: Georgia, serif; background:#f2f2f2; color:#000; }
     #page { width: 760px; margin: 20px auto; background:#fff; border:1px solid #ccc; }
-    #header { background:#003366; color:#fff; padding: 15px 20px; }
+    #header { background:#008000; color:#fff; padding: 15px 20px; }
     #nav { background:#e5e5e5; padding: 8px 20px; }
-    #nav a { margin-right: 12px; color:#003366; text-decoration: underline; }
+    #nav a { margin-right: 12px; color:#008000; text-decoration: underline; }
     #content { padding: 20px; }
     #footer { background:#e5e5e5; padding: 10px 20px; font-size: 12px; }
   </style>
@@ -16,8 +16,8 @@
 <body>
   <div id="page">
     <div id="header">
-      <h1>My Simple Blog</h1>
-      <p>old-school personal site</p>
+      <h1>Colby's Corner</h1>
+      <p>notes, updates, ruminations</p>
     </div>
     <div id="nav">
       <a href="index.html">Home</a>
@@ -27,7 +27,7 @@
     </div>
     <div id="content">
       <h2>Welcome</h2>
-      <p>This is my simple 2000s-style blog. Check out the posts linked above!</p>
+      <p>Welcome, my name is Colby. Feel free to linger awhile in this enclave of sanity.</p>
     </div>
     <div id="footer">
       &copy; 2025 My Simple Blog
