--- a/about.html
+++ b/about.html
@@ -1,35 +1,36 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="en">
 <head>
-  <meta charset="utf-8">
-  <title>About - My Simple Blog</title>
-  <style>
-    body { font-family: Georgia, serif; background:#f2f2f2; color:#000; }
-    #page { width: 760px; margin: 20px auto; background:#fff; border:1px solid #ccc; }
-    #header { background:#003366; color:#fff; padding: 15px 20px; }
-    #nav { background:#e5e5e5; padding: 8px 20px; }
-    #nav a { margin-right: 12px; color:#003366; text-decoration: underline; }
-    #content { padding: 20px; }
-    #footer { background:#e5e5e5; padding: 10px 20px; font-size: 12px; }
-  </style>
+<meta charset="utf-8">
+<meta name="viewport" content="width=device-width,initial-scale=1">
+<title>Pixel Diary — About</title>
+<link rel="stylesheet" href="css/style.css">
+<script src="js/site.js" defer></script>
 </head>
 <body>
-  <div id="page">
-    <div id="header">
-      <h1>About</h1>
-    </div>
-    <div id="nav">
-      <a href="index.html">Home</a>
-      <a href="about.html">About</a>
-      <a href="posts/post1.html">First Post</a>
-      <a href="posts/post2.html">Second Post</a>
-    </div>
-    <div id="content">
-      <p>This is a simple blog built in pure HTML, like in the early 2000s.</p>
-    </div>
-    <div id="footer">
-      &copy; 2025 My Simple Blog
-    </div>
-  </div>
+<header class="site-header">
+<a class="site-title" href="index.html">Pixel Diary</a>
+<nav class="main-nav">
+<a href="index.html">Home</a> |
+<a href="about.html">About</a> |
+<a href="interwebs.html">Interwebs</a> |
+<a href="posts.html">Posts</a>
+</nav>
+</header>
+
+
+<main class="container">
+<h1>About Pixel Diary</h1>
+<p>This site is a throwback to the early days of blogging: simple pages, lots of personality, and questionable design choices. It's run by a mysterious author who likes pixel art and animated GIFs.</p>
+
+
+<h2>Mission</h2>
+<p>To keep a tiny, permanent trail of small thoughts, music recommendations, and weird links. All content here is low bandwidth and high enthusiasm.</p>
+</main>
+
+
+<footer class="site-footer">
+<p>&copy; 2004 Pixel Diary</p>
+</footer>
 </body>
 </html>
