Change site name and update about section
Updated site title and content for Colby's Corner.

--- a/about.html
+++ b/about.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Pixel Diary — About</title>
+<title>Colby's Corner — About</title>
 <link rel="stylesheet" href="css/style.css">
 <script src="js/site.js" defer></script>
 </head>
 <body>
 <header class="site-header">
-<a class="site-title" href="index.html">Pixel Diary</a>
+<a class="site-title" href="index.html">Colby's Corner</a>
 <nav class="main-nav">
 <a href="index.html">Home</a> |
 <a href="about.html">About</a> |
@@ -20,17 +20,17 @@
 
 
 <main class="container">
-<h1>About Pixel Diary</h1>
-<p>This site is a throwback to the early days of blogging: simple pages, lots of personality, and questionable design choices. It's run by a mysterious author who likes pixel art and animated GIFs.</p>
+<h1>About Colby's Corner</h1>
+<p>This site is a throwback to the early days of blogging: simple pages, lots of personality, and beautiful design choices. It's run by a mysterious author who likes memes and animated GIFs.</p>
 
 
 <h2>Mission</h2>
-<p>To keep a tiny, permanent trail of small thoughts, music recommendations, and weird links. All content here is low bandwidth and high enthusiasm.</p>
+<p>To keep a tiny, permanent trail of small thoughts, book and music recommendations, plus weird links. All content here is low bandwidth and high enthusiasm.</p>
 </main>
 
 
 <footer class="site-footer">
-<p>&copy; 2004 Pixel Diary</p>
+<p>&copy; 2025 Colby's Corner</p>
 </footer>
 </body>
 </html>
