--- a/posts.html
+++ b/posts.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Pixel Diary — Posts</title>
+<title>Colby's Corner — Posts</title>
 <link rel="stylesheet" href="css/style.css">
 <script src="js/site.js" defer></script>
 </head>
 <body>
 <header class="site-header">
-<a class="site-title" href="index.html">Pixel Diary</a>
+<a class="site-title" href="index.html">Colby's Corner</a>
 <nav class="main-nav">
 <a href="index.html">Home</a> |
 <a href="about.html">About</a> |
@@ -22,14 +22,14 @@
 <main class="container">
 <h1>All Posts</h1>
 <ol class="all-posts">
-<li><a href="posts/post1.html">My 2000s Micro-Guide to Making a Homepage</a> <small class="meta">Aug 12, 2004</small></li>
-<li><a href="posts/post2.html">Top 10 Animated GIFs You Forgot About</a> <small class="meta">Jun 01, 2003</small></li>
+<li><a href="posts/post1.html">1st post</a> <small class="meta">Aug 12, 2025</small></li>
+<li><a href="posts/post2.html">2nd post</a> <small class="meta">Jun 01, 2025</small></li>
 </ol>
 </main>
 
 
 <footer class="site-footer">
-<p>&copy; 2004 Pixel Diary</p>
+<p>&copy; 2025 Colby's Corner</p>
 </footer>
 </body>
 </html>
