Update title and footer copyright information

--- a/interwebs.html
+++ b/interwebs.html
@@ -3,13 +3,13 @@
 <head>
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
-<title>Pixel Diary — Interwebs</title>
+<title>Colby's Corner — Interwebs</title>
 <link rel="stylesheet" href="css/style.css">
 <script src="js/site.js" defer></script>
 </head>
 <body>
 <header class="site-header">
-<a class="site-title" href="index.html">Pixel Diary</a>
+<a class="site-title" href="index.html">Colby's Corner</a>
 <nav class="main-nav">
 <a href="index.html">Home</a> |
 <a href="about.html">About</a> |
@@ -31,7 +31,7 @@
 
 
 <footer class="site-footer">
-<p>&copy; 2004 Pixel Diary</p>
+<p>&copy; 2025 Colby's Corner</p>
 </footer>
 </body>
 </html>
