Update blurb and footer text in index.html

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
 <main class="container">
 <h1>Welcome to Colby's Corner</h1>
-<p class="blurb">A small corner of the World Wide Web — retro vibes, quick loading, and links.</p>
+<p class="blurb">A small corner of the Internet where I occasionally post things I found interesting.</p>
 
 
 <section class="recent">
@@ -49,7 +49,7 @@
 
 
 <footer class="site-footer">
-<p>&copy; 2025 Colby's Corner — made to be written and read by real people.</p>
+<p>&copy; 2025 Colby's Corner — real information, not AI.</p>
 </footer>
 </body>
 </html>
