Add hit counter image to footer

--- a/index.html
+++ b/index.html
@@ -49,6 +49,7 @@
 
 
 <footer class="site-footer">
+<img src="https://hitscounter.dev/api/hit?url=colbyscorner.com&label=Hits&icon=emoji-sunglasses-fill&color=%23198754&message=&style=flat&tz=UTC">
 <p>&copy; 2025 Colby's Corner — real information, not AI.</p>
 </footer>
 </body>
