Add favicon link to index.html

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 <meta charset="utf-8">
 <meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Colby's Corner — Home</title>
+<link rel="icon" href="favicon.ico.png" type="image/x-icon">
 <link rel="stylesheet" href="css/style.css">
 <script src="js/site.js" defer></script>
 </head>
