Update image source URL for The Two Crowns

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <p class="blurb">A small corner of the Internet where I occasionally post things I found interesting.</p>
 
   
-<img src="https://en.wikipedia.org/wiki/The_Two_Crowns#/media/File%3ASir_Frank_Dicksee_-_The_Two_Crowns_-_Google_Art_Project.jpg"/>
+<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Sir_Frank_Dicksee_-_The_Two_Crowns_-_Google_Art_Project.jpg/1280px-Sir_Frank_Dicksee_-_The_Two_Crowns_-_Google_Art_Project.jpg"/>
 
   
 <section class="recent">
