Refactor index.html to include hero section
Removed duplicate image tag and added a hero section with an image.

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
 <h1>Welcome to Colby's Corner</h1>
 <p class="blurb">A small corner of the Internet where I occasionally post things I found interesting.</p>
 
-  
-<img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Sir_Frank_Dicksee_-_The_Two_Crowns_-_Google_Art_Project.jpg/1280px-Sir_Frank_Dicksee_-_The_Two_Crowns_-_Google_Art_Project.jpg"/>
-
+<div class="hero">
+  <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/7/7e/Sir_Frank_Dicksee_-_The_Two_Crowns_-_Google_Art_Project.jpg/1280px-Sir_Frank_Dicksee_-_The_Two_Crowns_-_Google_Art_Project.jpg" alt="Retro banner" class="hero-img">
+</div>
   
 <section class="recent">
 <h2>Recent Posts</h2>
